--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,6 +11,7 @@
   <properties>
       <maven.compiler.source>1.7</maven.compiler.source>
       <maven.compiler.target>1.7</maven.compiler.target>
+      <encoding>UTF-8</encoding>
   </properties>
 
   <build>
