--- a/java/pom.xml
+++ b/java/pom.xml
@@ -19,24 +19,24 @@
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <configuration>
+<!--           <configuration>
               <archive>
                   <manifest>
                       <addClasspath>true</addClasspath>
                       <mainClass>com.mysqltest.test.MysqlTest</mainClass>
                   </manifest>
               </archive>
-          </configuration>
+          </configuration> -->
       </plugin>
       <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <configuration>
-              <archive>
+<!--               <archive>
                   <manifest>
                       <addClasspath>true</addClasspath>
                       <mainClass>com.mysqltest.test.MysqlTest</mainClass>
                   </manifest>
-              </archive>  
+              </archive>  --> 
               <descriptorRefs>
                   <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
@@ -65,6 +65,11 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.40</version>
+    </dependency>
+    <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
     </dependency>
   </dependencies>
   
